[gd_scene load_steps=6 format=2]

[ext_resource path="res://Stuff/Potions/Special Potion/SpecialPotion.gd" type="Script" id=1]
[ext_resource path="res://Stuff/Potions/Special Potion/Special (1).png" type="Texture" id=2]
[ext_resource path="res://Stuff/Potions/Special Potion/Special (2).png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 3.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 7.35972

[node name="SpecialPotion" type="Area2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )
[connection signal="area_exited" from="." to="." method="_on_SpecialPotion_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_SpecialPotion_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_SpecialPotion_body_exited"]
